# hs-msgpack-json

./: .cirrus.yml  BUILD.bazel  README.md  msgpack-json.cabal  stack.yaml
.github/docker/: Dockerfile
src/Data/MessagePack/: Aeson.hs
test/Data/MessagePack/: AesonSpec.hs
test/Test/QuickCheck/Instances/: MessagePack.hs
