name:          msgpack-json
version:       0.2.0
synopsis:      A Haskell implementation of MessagePack.
homepage:      http://msgpack.org/
license:       BSD3
license-file:  LICENSE
author:        Hideyuki Tanaka
maintainer:    Iphigenia Df <iphydf@gmail.com>
copyright:     Copyright (c) 2009-2016, Hideyuki Tanaka
category:      Data
stability:     Experimental
cabal-version: >=1.10
build-type:    Simple
description:
  A Haskell implementation of MessagePack <http://msgpack.org/>
  .
  This is a fork of msgpack-haskell <https://github.com/msgpack/msgpack-haskell>,
  since the original author is unreachable. This fork incorporates a number of
  bugfixes and is actively being developed.

source-repository head
  type:     git
  location: https://github.com/TokTok/hs-msgpack-types.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -Wno-unused-imports
  exposed-modules:
    Data.MessagePack.Aeson

  build-depends:
      aeson
    , base                  <5
    , monad-validate
    , msgpack-types
    , scientific
    , vector

test-suite testsuite
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            testsuite.hs
  other-modules:
    Data.MessagePack.AesonSpec
    Test.QuickCheck.Instances.MessagePack

  ghc-options:        -Wall -Wno-unused-imports
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      base                  <5
    , bytestring
    , hspec
    , monad-validate
    , msgpack-json
    , msgpack-types
    , QuickCheck
    , quickcheck-instances
    , text
    , vector
